--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,6 +8,11 @@ a {
   margin: 0;
   padding: 0;
   color: black;
+  text-decoration: none !important;
+}
+a:hover {
+  color: black;
+  text-decoration: none !important;
 }
 
 .h1,
