--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
 h1,
 h2,
 h3,
@@ -44,4 +49,19 @@ a {
 
 .kategori button {
   background-color: #76a0b4;
+}
+
+.sdid-search h4,
+.sdid-search p {
+  color: #193848;
+}
+
+.sdid-kategori .p-3 {
+  background-color: #d6e2e9;
+  color: #193848;
+}
+
+.sdid-kategori .p-3 p,
+.sdid-kategori .p-3 h5 {
+  color: #193848;
 }
