--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3,6 +3,7 @@ h2,
 h3,
 h4,
 h5,
+h6,
 p,
 a {
   margin: 0;
@@ -19,7 +20,8 @@ a:hover {
 .h2,
 .h3,
 .h4,
-.h5 {
+.h5,
+.h6 {
   margin: 0;
   padding: 0;
   color: black;
